--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +16,11 @@
       height: 100vh;
       gap: 10px;
     }
+    .ad-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     video {
       width: 100%;
       max-width: 800px;
@@ -23,10 +29,39 @@
     }
   </style>
 </head>
+  <script type='text/javascript' src='//eltontry.com/09/f1/e9/09f1e956c711aea6a898d5abbb78d092.js'></script>
 <body>
+
+  <!-- Top Ad -->
+  <div class="ad-container">
+    <script type="text/javascript">
+      atOptions = {
+        'key': '',
+        'format': 'iframe',
+        'height': 60,
+        'width': 468,
+        'params': {}
+      };
+    </script>
+    <script type="text/javascript" src="//eltontry.com/244d55edeba6016826a285214b7c7c77/invoke.js"></script>
+  </div>
 
   <!-- Video Player -->
   <video id="video" controls muted playsinline></video>
+
+  <!-- Bottom Ad -->
+  <div class="ad-container">
+    <script type="text/javascript">
+      atOptions = {
+        'key': '',
+        'format': 'iframe',
+        'height': 60,
+        'width': 468,
+        'params': {}
+      };
+    </script>
+    <script type="text/javascript" src="//eltontry.com/244d55edeba6016826a285214b7c7c77/invoke.js"></script>
+  </div>
 
   <!-- HLS Player Script -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
@@ -86,10 +121,81 @@
 
   <!-- Telegram Redirect -->
   <script>
-    if (confirm("Join Our Telegram Channel @allinone_reborn") == true) {
-      window.open("https://t.me/allinone_reborn");
+    if (confirm("Join Our Telegram Channel @ʜɪᴍᴀɴꜱʜᴜ x ᴍᴀᴛᴄʜᴇꜱ ʟɪɴᴋꜱ") == true) {
+      window.open("https://t.me/+iE5UX3qoGpwyNWI1");
     }
   </script>
 
+  <!-- Disable DevTools -->
+  <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
+
+  <!-- Anti-Adblock Popup -->
+  <div class="adb" id="adb" style="display: none;">
+      <div class="adbs">
+          <h3>Adblock Detected</h3>
+          <p>Please disable adblock to proceed to the destination page</p>
+      </div>
+  </div>
+
+  <style>
+      .adb {
+          display: none;
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          background: rgba(51, 51, 51, 0.9);
+          z-index: 10000;
+          text-align: center;
+          color: #111;
+      }
+
+      .adbs {
+          margin: 0 auto;
+          width: auto;
+          min-width: 400px;
+          position: fixed;
+          z-index: 99999;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          padding: 20px 30px 30px;
+          background: rgba(255, 255, 255, 0.9);
+          border-radius: 12px;
+      }
+  </style>
+
+  <script type="text/javascript">
+      async function detectAdBlock() {
+          let adBlockEnabled = false;
+          const googleAdUrl = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
+
+          try {
+              const controller = new AbortController();
+              const timeoutId = setTimeout(() => controller.abort(), 3000); // 3s timeout
+
+              await fetch(new Request(googleAdUrl), { signal: controller.signal })
+                  .then(() => clearTimeout(timeoutId))
+                  .catch(error => {
+                      if (error.name === 'AbortError') return; // Ignore timeout errors
+                      adBlockEnabled = true;
+                  });
+
+          } catch (e) {
+              adBlockEnabled = true;
+          }
+
+          if (adBlockEnabled) {
+              document.getElementById("adb").style.display = "block";
+          }
+      }
+
+      detectAdBlock();
+  </script>
+
 </body>
+  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
+  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
+  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
 </html>
