--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="ad-container">
     <script type="text/javascript">
       atOptions = {
-        'key': '',
+        'key': '244d55edeba6016826a285214b7c7c77',
         'format': 'iframe',
         'height': 60,
         'width': 468,
@@ -53,7 +53,7 @@
   <div class="ad-container">
     <script type="text/javascript">
       atOptions = {
-        'key': '',
+        'key': '244d55edeba6016826a285214b7c7c77',
         'format': 'iframe',
         'height': 60,
         'width': 468,
