--- a/index.html
+++ b/index.html
@@ -1,201 +1,236 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>@allinone_reborn</title>
+  <meta charset="UTF-8">
+  <title>SONY SPORTS 3 HD</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
   <style>
+    :root {
+      --bg-light: #f0f0f0;
+      --bg-dark: #121212;
+      --text-light: #000;
+      --text-dark: #fff;
+    }
+
+    [data-theme="light"] {
+      background-color: var(--bg-light);
+      color: var(--text-light);
+    }
+
+    [data-theme="dark"] {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
+    }
+
     body {
       margin: 0;
-      background: #000;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(-45deg, #141e30, #243b55, #141e30);
+      background-size: 400% 400%;
+      animation: gradientBG 18s ease infinite;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      height: 100vh;
-      gap: 10px;
+      min-height: 100vh;
+      padding: 20px 10px;
+      transition: background 0.3s ease;
     }
-    .ad-container {
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .title {
+      font-size: 2em;
+      color: white;
+      text-align: center;
+      animation: bounce 2s infinite;
+      margin-top: 10px;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+
+    .theme-toggle {
+      position: fixed;
+      top: 15px;
+      right: 15px;
+      background: #fff;
+      color: #000;
+      border: none;
+      border-radius: 8px;
+      padding: 8px 14px;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 999;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      transition: all 0.3s;
+    }
+
+    .ad-top, .ad-bottom {
+      margin: 20px auto;
+      text-align: center;
+    }
+
+    .player-container {
+      width: 100%;
+      max-width: 960px;
+      margin: 20px auto;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+    }
+
+    video {
+      width: 100%;
+      height: 500px;
+      border-radius: 16px;
+      background: #000;
+      outline: none;
+    }
+
+    /* Popup */
+    .popup-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.7);
       display: flex;
       justify-content: center;
       align-items: center;
+      z-index: 9999;
     }
-    video {
-      width: 100%;
-      max-width: 800px;
-      height: auto;
-      background: #000;
+
+    .popup-box {
+      background: white;
+      padding: 25px;
+      border-radius: 12px;
+      text-align: center;
+      animation: popIn 0.5s ease;
+      width: 90%;
+      max-width: 320px;
+    }
+
+    @keyframes popIn {
+      0% { transform: scale(0.8); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    .popup-box h3 {
+      font-size: 1.1em;
+      margin-bottom: 15px;
+      color: #333;
+    }
+
+    .popup-box button {
+      margin: 5px;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .popup-box button.join {
+      background: #0088cc;
+      color: white;
+    }
+
+    .popup-box button.later {
+      background: #ccc;
+    }
+
+    @media (max-width: 600px) {
+      video { height: 250px; }
+      .theme-toggle {
+        top: 10px;
+        right: 10px;
+        padding: 6px 10px;
+        font-size: 0.9em;
+      }
     }
   </style>
 </head>
-  <script type='text/javascript' src='//eltontry.com/09/f1/e9/09f1e956c711aea6a898d5abbb78d092.js'></script>
 <body>
 
-  <!-- Top Ad -->
-  <div class="ad-container">
+  <button class="theme-toggle" onclick="toggleTheme()">🌗 Theme</button>
+
+  <!-- Title -->
+  <div class="title">SONY SPORTS 3 HD</div>
+
+  <!-- Top Banner Ad -->
+  <div class="ad-top">
     <script type="text/javascript">
       atOptions = {
-        'key': '244d55edeba6016826a285214b7c7c77',
+        'key': 'f462185cefb6d461f3117d5528894d70',
         'format': 'iframe',
         'height': 60,
         'width': 468,
         'params': {}
       };
     </script>
-    <script type="text/javascript" src="//eltontry.com/244d55edeba6016826a285214b7c7c77/invoke.js"></script>
+    <script src="//www.highperformanceformat.com/f462185cefb6d461f3117d5528894d70/invoke.js"></script>
   </div>
 
   <!-- Video Player -->
-  <video id="video" controls muted playsinline></video>
+  <div class="player-container">
+    <video id="hls-player" controls></video>
+  </div>
 
   <!-- Bottom Ad -->
-  <div class="ad-container">
+  <div class="ad-bottom">
     <script type="text/javascript">
       atOptions = {
-        'key': '244d55edeba6016826a285214b7c7c77',
+        'key': '22061d1cac0f161c4f09eabb8d20dc5e',
         'format': 'iframe',
-        'height': 60,
-        'width': 468,
+        'height': 50,
+        'width': 320,
         'params': {}
       };
     </script>
-    <script type="text/javascript" src="//eltontry.com/244d55edeba6016826a285214b7c7c77/invoke.js"></script>
+    <script src="//www.highperformanceformat.com/22061d1cac0f161c4f09eabb8d20dc5e/invoke.js"></script>
   </div>
 
-  <!-- HLS Player Script -->
+  <!-- Pop-up Ad Script -->
+  <script type='text/javascript' src='//pl26946315.profitableratecpm.com/13/da/36/13da3638a45ceba84c4a9b418fc05588.js'></script>
+
+  <!-- Telegram Popup -->
+  <div class="popup-overlay" id="telegramPopup">
+    <div class="popup-box">
+      <h3>Join Our Telegram for Free Links 🚀</h3>
+      <button class="join" onclick="window.open('https://t.me/+iE5UX3qoGpwyNWI1', '_blank')">Join Now</button>
+      <button class="later" onclick="document.getElementById('telegramPopup').style.display='none'">Maybe Later</button>
+    </div>
+  </div>
+
+  <!-- HLS.js -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script>
-    const video = document.getElementById('video');
-    const videoSrc = 'https://allinonereborn.site/str2/stream.m3u8';
+    const video = document.getElementById('hls-player');
+    const streamURL = 'https://proxy-js.onrender.com/https://allinonereborn.site/str2/stream.m3u8';
 
-    function setupHLS() {
-      if (Hls.isSupported()) {
-        const hls = new Hls({
-          maxBufferLength: 30,
-          liveSyncDurationCount: 3,
-          enableWorker: true,
-          lowLatencyMode: true
-        });
-
-        hls.loadSource(videoSrc);
-        hls.attachMedia(video);
-
-        hls.on(Hls.Events.MANIFEST_PARSED, function () {
-          video.controls = true; // Force controls to show
-          video.play().catch(err => console.error('Autoplay error:', err));
-        });
-
-        hls.on(Hls.Events.ERROR, function (event, data) {
-          console.error('HLS error:', data);
-          if (data.fatal) {
-            switch (data.type) {
-              case Hls.ErrorTypes.NETWORK_ERROR:
-                console.log("Network error. Trying to recover...");
-                hls.startLoad();
-                break;
-              case Hls.ErrorTypes.MEDIA_ERROR:
-                console.log("Media error. Trying to recover...");
-                hls.recoverMediaError();
-                break;
-              default:
-                hls.destroy();
-                alert("An unrecoverable error occurred. Please reload the page.");
-                break;
-            }
-          }
-        });
-      } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = videoSrc;
-        video.addEventListener('loadedmetadata', () => {
-          video.controls = true; // Force controls to show
-          video.play().catch(err => console.error('Autoplay error:', err));
-        });
-      } else {
-        alert("Your browser does not support HLS streaming.");
-      }
+    if (Hls.isSupported()) {
+      const hls = new Hls();
+      hls.loadSource(streamURL);
+      hls.attachMedia(video);
+    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+      video.src = streamURL;
     }
 
-    setupHLS();
-  </script>
-
-  <!-- Telegram Redirect -->
-  <script>
-    if (confirm("Join Our Telegram Channel @ʜɪᴍᴀɴꜱʜᴜ x ᴍᴀᴛᴄʜᴇꜱ ʟɪɴᴋꜱ") == true) {
-      window.open("https://t.me/+iE5UX3qoGpwyNWI1");
+    function toggleTheme() {
+      const html = document.documentElement;
+      const current = html.getAttribute('data-theme');
+      html.setAttribute('data-theme', current === 'dark' ? 'light' : 'dark');
     }
   </script>
-
-  <!-- Disable DevTools -->
-  <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-
-  <!-- Anti-Adblock Popup -->
-  <div class="adb" id="adb" style="display: none;">
-      <div class="adbs">
-          <h3>Adblock Detected</h3>
-          <p>Please disable adblock to proceed to the destination page</p>
-      </div>
-  </div>
-
-  <style>
-      .adb {
-          display: none;
-          position: fixed;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          top: 0;
-          background: rgba(51, 51, 51, 0.9);
-          z-index: 10000;
-          text-align: center;
-          color: #111;
-      }
-
-      .adbs {
-          margin: 0 auto;
-          width: auto;
-          min-width: 400px;
-          position: fixed;
-          z-index: 99999;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          padding: 20px 30px 30px;
-          background: rgba(255, 255, 255, 0.9);
-          border-radius: 12px;
-      }
-  </style>
-
-  <script type="text/javascript">
-      async function detectAdBlock() {
-          let adBlockEnabled = false;
-          const googleAdUrl = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
-
-          try {
-              const controller = new AbortController();
-              const timeoutId = setTimeout(() => controller.abort(), 3000); // 3s timeout
-
-              await fetch(new Request(googleAdUrl), { signal: controller.signal })
-                  .then(() => clearTimeout(timeoutId))
-                  .catch(error => {
-                      if (error.name === 'AbortError') return; // Ignore timeout errors
-                      adBlockEnabled = true;
-                  });
-
-          } catch (e) {
-              adBlockEnabled = true;
-          }
-
-          if (adBlockEnabled) {
-              document.getElementById("adb").style.display = "block";
-          }
-      }
-
-      detectAdBlock();
-  </script>
-
 </body>
-  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
-  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
-  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
 </html>
