--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <script>
         // Initialize JW Player
         jwplayer("jwplayerDiv").setup({
-            file: "https://mintos.allinonereborn.xyz/sony/stream_proxy.php?url=https%3A%2F%2Ftataplay.slivcdn.com%2Fhls%2Flive%2F2020592%2FTEN3SD%2Fmaster.m3u8",
+            file: "https://dtvxtream.com/sonyliv2/300255.m3u8",
             autostart: true,
             stretching: "uniform",
             width: "100%",
